# enggame

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
assets/models/player/: player.glb
assets/shaders/: fragment_shader.glsl  skybox_fragment_shader.glsl  skybox_vertex_shader.glsl  vertex_shader.glsl
include/core/: enemy.hpp  engine.hpp  game_object.hpp  input_system.hpp  player.hpp  projectile.hpp  scene.hpp  transform.hpp
include/game_objects/: geometry_maker.hpp
include/glad/: glad.h
include/graphics/: camera.hpp  light.hpp  mesh.hpp  renderer.hpp  shader_program.hpp  texture_loader.hpp
include/physics/: hitbox.hpp  physics_engine.hpp
src/: glad.c  main.cpp
src/core/: enemy.cpp  engine.cpp  game_object.cpp  input_system.cpp  player.cpp  projectile.cpp  scene.cpp  transform.cpp
src/game_objects/: geometry_maker.cpp
src/graphics/: camera.cpp  light.cpp  mesh.cpp  renderer.cpp  shader_program.cpp  texture_loader.cpp
src/physics/: physics_engine.cpp
